# api/controllers/face.js
@@ -4,6 +4,8 @@ var rekognition = new AWS.Rekognition({ apiVersion: '2016-06-27' });
 
 var moment=require("moment");
 
+var fs=require("fs");
+
 // Email Constants
 
 'use strict';
@@ -21,7 +23,7 @@ mongoose.connect(mongoURL, { useNewUrlParser: true }, function (err, connect) {
   if (err) {
     console.log("Mongodb not Connected" + err);
   } else {
-    console.log("Mongodb Connected")
+    console.log("Mongodb Connected in faceRecc")
 
   }
 });
@@ -33,12 +35,23 @@ module.exports = {
 
 
 function registerUser(req, res) {
+  console.log("Came Here");
   var responseRegister = {};
+  var file = req.swagger.params.file;
+  console.log(file);
+
+  var fs = require('fs');
+  // string generated by canvas.toDataURL()
+  var buf = new Buffer(file.value.buffer, 'base64');
+  console.log(file);
+  fs.writeFileSync('image1.png', buf);
+
   var username = req.body.username;
-  var mobNumber =  req.body.phonenumber;
+  var phonenumber =  req.body.phonenumber;
   var password = req.body.password;
   //var gender = req.body.gender;
   var emailId = req.body.emailId;
+  /*
   var loginCred = Users.findOne({
     phonenumber:phonenumber
   })
@@ -74,7 +87,7 @@ function registerUser(req, res) {
     console.log(err);
     responseRegister.status="We are facing a technical difficulty right now. Please wait while we get back at you:-P";
       res.json(responseRegister);
-  })
+  }) */
 }
 
 function login(req, res) {
@@ -135,7 +148,7 @@ function deleteUser(req,res){
   })
   .catch(err => {
 
-  })
+  }) 
 }
 
 
